Base station - now using the latest module driver lib